updates per Tim's comments