@@ -157,7 +157,7 @@
 
   <properties>
     <sgs-server.version>0.9.8</sgs-server.version>
-    <jvm.args>-Xmx1g</jvm.args>
+    <jvm.args>-server -XX:+AggressiveOpts -XX:+UseParallelOldGC -Xmx768M -XX:NewRatio=1</jvm.args>
     <jvm.args.extra></jvm.args.extra>
     <logging.properties>${project.build.directory}/test-classes/logging.properties</logging.properties>
 
@@ -175,5 +175,14 @@
       <layout>default</layout>
     </repository>
   </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>java.net</id>
+      <name>java.net Maven2 Repository</name>
+      <url>http://download.java.net/maven/2/</url>
+      <layout>default</layout>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
